# Neurodegen-Vis

./: .gitignore  .gitlab-ci.yml  README.md  bun.lockb  docker-compose.yml  package.json  pyproject.toml  tasks.py
backend/: .gitignore  Dockerfile  chat.py  main.py  requirements.txt
backend/local_test/: main.py  mainv0.py
frontend/: .env.development  .env.production  .gitignore  Dockerfile  bun.lockb  index.html  package.json  tasks.py  tsconfig.app.json  tsconfig.json  vite.config.ts
frontend/nginx/: nginx.conf
frontend/public/databases/: noisy.csv
frontend/src/: App.tsx  Chat.tsx  PCA.tsx  main.tsx  systems_specification_general.json  systems_specification_pd.json
frontend/src/api/: chat_response.ts  client.ts
frontend/src/components/: FollowUpBubbles.tsx  chat_sidepanel.tsx  multiselectdropdown.tsx
frontend/src/css/: App.css  Chat-sidePanel.css  testApp.css
frontend/src/data/: Patient.ts  variables_feature_lists.ts
frontend/src/env_dataset/: PD_DataFieldsDescription_plain.txt
src/: App.css  App.tsx  Chat.tsx  ChatGPT.tsx  Heatmap_Scatterplots.tsx  HelperFunctions.tsx  Kmean.tsx  PCA.tsx  Patient.ts  categorical_keys_list.ts  dropdown.css  index.css  k-mean.tsx  key_list.ts  main.tsx  numerical_keys_list.ts  systems_specification.json  systems_specification_general.json  systems_specification_pd.json  zTestMethodsMapping.ts
src/css/: App.css  Chat-sidePanel.css  FollowUpBubble.css  GPT-sidePanel.css  dropdown.css  index.css  testApp.css
src/env_dataset/: Patient.ts  variables_feature_lists.ts
src/testScripts/: testApp.tsx
(+29 files in other folders)
